# HackDavis2023_VisualTales

./: README.md  db.sqlite3  pyproject.toml  replit_zip_error_log.txt
django_project/: settings.py  urls.py
visualTales/: apps.py  models.py  styles.py  textParser.py  urls.py  views.py
visualTales/migrations/: 0001_initial.py  0002_auto_20230521_0135.py
visualTales/templates/: base.html  main.html
